# backend

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  database.db  docker-compose.yml  openapi.yaml  pyproject.toml
migrations/: env.py  script.py.mako
migrations/versions/: 0a5b9ea5a834_add_enums_for_room_and_pomodoro.py  0c3f945eb80f_init.py  0cbe64b17e41_fix_foreign_keys_for_relations.py  14e8881d5905_fix_room_participant_timezone_columns.py  23f51a1728a5_init.py  2434ad79860b_init.py  3e8ba93ed850_add_email_notification_table.py  7fa7989f06af_update_pomodoro_created_at_send_at_.py  83ae5d5b1779_restore_refresh_sessions_table.py  8adb87db79a6_init.py  8c0033a7f747_init.py  91169b5ecb10_init.py  9185abb29eef_fix_model_constraints_and_timezone_.py  a7d308e9b3c0_update_refresh_sessions_token_.py  b95b11e272cf_add_rbac_models.py  c2716a413fc3_init.py  cf12f7faa765_init.py  e5bea7293608_add_is_verified_to_user.py  ec0db1362d90_update_pomodoro_session_model.py  f0d9cf79f577_create_refresh_sessions_table.py  f1146c74a873_fix_user_last_login_at_timezone2.py  f8c83c8104aa_init.py  fc0bae9e1153_init.py  fff5505e6af2_fix_foreign_keys_for_room_and_board_.py
src/app/: dependencies.py  gunicorn_config.py  init.py  main.py  models.py
src/app/core/: error_handler.py  limiter.py  middlewares.py  rbac.py  responses.py  security.py  settings.py
src/app/db/: database.py  engine.py  session.py
src/app/dependencies/: auth.py  repositories.py  room_access.py  route_guards.py  router_bundles.py  security.py  services.py  session.py
src/app/models/: __init__.py  base.py  (+16 more)
(+61 files in other folders)
