[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "email-validator>=2.3.0",
    "fastapi>=0.135.1",
    "psycopg>=3.3.3",
    "pydantic[email-validator]>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-generics>=0.2.4",
    "sqlalchemy>=2.0.48",
    "sqlmodel>=0.0.37",
    "uvicorn>=0.41.0",
    "pwdlib[argon2]>=0.3.0",
    "python-multipart>=0.0.24",
    "pyjwt>=2.12.1",
    "python-socketio>=5.16.1",

    "fastapi-mail>=1.6.2",
    "slowapi>=0.1.9",
    "gunicorn>=25.3.0",
    "jwt>=1.4.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.4",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
fixable = ["ALL"]
select = [
    "E",
    "F",
    "FAST",
    "PL",
    "I",
    "ARG",
    "RET",
    "ASYNC",
    "B",
    "A",
    "ICN",
    "SLF",
    "SIM",
    "C90",
    "N",
    "W"
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = false
docstring-code-line-length = "dynamic"
skip-magic-trailing-comma = false
